[package]
name = "rustname"
version = "0.1.1"
authors = ["Twan Stok <twanstok@gmail.com>"]
edition = "2021"
description = "Mass renaming tool"
readme = "readme.md"
license = "MIT"
keywords = ["cli", "regex", "pattern"]
categories = ["command-line-utilities", "filesystem"]
exclude = ["/.idea", "/test_data"]
repository = "https://github.com/aragonnetje6/rustname"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
clap = { version = "3.2.13", features = ["derive"] }
